--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,74 @@
-.App {
+.container {
+  display: flex;
+  width: auto;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 60px;
+}
+.currency {
+  display: flex;
+  flex-direction: column;
+  padding: 0 15px;
+  border: 4px solid cornflowerblue;
+  border-radius: 10px;
+  background-color: khaki;
+}
+.currency h2 {
   text-align: center;
+}
+.currency-names {
+  display: flex;
+}
+.currency-names p {
+  padding: 7px 0;
+}
+.currency ul {
+  list-style: none;
+  display: inline;
+}
+
+.currency li {
+  display: inline-block;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.currency-action {
+  display: flex;
+  justify-content: space-between;
+}
+
+.currency-action span {
+  width: 40%;
+  text-align: center;
+  padding: 10px;
+  border: 2px solid cornflowerblue;
+  border-radius: 10px;
+  color: cornflowerblue;
+  cursor: pointer;
+}
+.currency-action span.active {
+  color: white;
+  background-color: cornflowerblue;
+}
+.currencies {
+  padding: 5px 10px;
+  border: 2px solid cornflowerblue;
+  color: cornflowerblue;
+}
+.activeCurrency {
+  background-color: cornflowerblue;
+  color: white;
+}
+.fields label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.fields label input {
+  width: auto;
+  padding: 10px;
+  margin-top: 5px;
 }
 
